--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,13 @@ edition = "2021"
 [dependencies]
 hex = "0.4"
 serialport = "4.1"
+prost = "0.10"
+protobuf = "2.27"
+protobuf-codegen-pure = "2.27"
+
+[dependencies.uuid]
+version = "1.0.0"
+features = [
+    "v4",
+    "fast-rng",
+]
