--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ prost = "0.10"
 log = "0.4"
 env_logger = "0.9"
 lightspeed = { git = "https://github.com/devducks/lightspeed", rev = "v0.5.0" }
+astrotools = { git = "https://github.com/devducks/astrotools", rev = "v0.1.3" }
 protobuf = "3.0"
 tonic = "0.7"
 tokio = { version = "1", features = ["rt-multi-thread"] }
@@ -24,6 +25,3 @@ features = [
     "fast-rng",
 ]
 
-[[bin]]
-name = "ls_ppba"
-path = "src/ppba/server.rs"
