--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ prost = "0.10"
 log = "0.4"
 env_logger = "0.9"
 lightspeed = { git = "https://github.com/devducks/lightspeed", rev = "v0.5.0" }
-astrotools = { git = "https://github.com/devducks/astrotools", rev = "v0.1.3" }
+astrotools = { git = "https://github.com/devducks/astrotools", rev = "v0.1.4" }
 protobuf = "3.0"
 tonic = "0.7"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 tokio-serial = "5.4"
-
+num = "0.4"
 [dependencies.uuid]
 version = "1.0.0"
 features = [
