--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,10 @@ edition = "2021"
 [dependencies]
 hex = "0.4"
 serialport = "4.1"
-prost = "0.10"
 log = "0.4"
 env_logger = "0.9"
 lightspeed = { git = "https://github.com/devducks/lightspeed", rev = "v0.5.0" }
-protobuf = "3.0"
+astrotools = { git = "https://github.com/devducks/astrotools", rev = "v0.1.4" }
 tonic = "0.7"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 tokio-serial = "5.4"
@@ -24,6 +23,3 @@ features = [
     "fast-rng",
 ]
 
-[[bin]]
-name = "ls_ppba"
-path = "src/ppba/server.rs"
