--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ hex = "0.4"
 serialport = "4.1"
 log = "0.4"
 env_logger = "0.9"
-lightspeed = { git = "https://github.com/devducks/lightspeed", rev = "v0.5.0" }
-astrotools = { git = "https://github.com/devducks/astrotools", rev = "v0.1.4" }
+lightspeed-astro = "0.6.2"
+astrotools = "0.2.1"
 tonic = "0.7"
+tonic-reflection = "0.4"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 tokio-serial = "5.4"
 
