--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "pegasus_astro"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0-or-later"
+repository = "https://github.com/devDucks/pegasus-rs/"
+readme = "README.md"
+description = "Multiplatform drivers for PegasusAstro equipment with a bit of gRPC"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
