--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,14 @@ description = "Multiplatform drivers for PegasusAstro equipment with a bit of gR
 
 [dependencies]
 hex = "0.4"
-serialport = "4.1"
+serialport = "4.3"
 log = "0.4"
-env_logger = "0.9"
+env_logger = "0.11"
 astrotools = "0.5"
 tokio = { version = "1", features = ["rt-multi-thread", "signal", "tracing"] }
-tokio-serial = "5.4"
 serde_json = "1.0.115"
-serde = { version = "1.0.163", features = ["derive"] }
-rumqttc = "0.21.0"
-console-subscriber = "0.1.9"
+serde = { version = "1.0.197", features = ["derive"] }
+rumqttc = "0.24"
 
 [dependencies.uuid]
 version = "1"
@@ -29,3 +27,5 @@ features = [
     "fast-rng",
 ]
 
+[profile.release]
+debug = true
