--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ hex = "0.4"
 serialport = "4.3"
 log = "0.4"
 env_logger = "0.11"
-astrotools = { git = "https://github.com/devDucks/astrotools" }
+astrotools = "0.8"
 tokio = { version = "1", features = ["rt-multi-thread", "signal", "tracing"] }
 serde_json = "1.0.115"
 serde = { version = "1.0.197", features = ["derive"] }
@@ -23,7 +23,7 @@ rumqttc = "0.24"
 [dependencies.uuid]
 version = "1"
 features = [
-    "v4",
+    "v5",
     "fast-rng",
 ]
 
